# semantic-geometry-builder

./: .gitignore  README.md  pyproject.toml
fixtures/open_pdk/: martinis2022_ribbon.stack.json  martinis2022_ribbon.tech  resonator.stack.json  resonator.tech  sim_flip_chip_distance.gds  sim_flip_chip_distance.stack.json
src/semantic_geometry_builder/: __init__.py  adapter.py  engine_gates.py  export.py  ir.py  mesh_gate.py  models.py  pipeline.py  planning.py  validation.py
tests/: test_port_sheet_regions.py  test_public_api.py  test_validation.py
tutorials/: README.md  martinis2022_ribbon_route_a.ipynb  martinis2022_ribbon_route_b.ipynb  martinis2022_ribbon_route_c.ipynb  resonator_route_a.ipynb  resonator_route_b.ipynb  resonator_route_c.ipynb
tutorials/assets/: martinis2022_ribbon.gds  martinis2022_ribbon.stack.json  resonator.gds  resonator.stack.json  resonator_with_indium_bumps.gds  resonator_with_indium_bumps.stack.json  sim_flip_chip_distance.gds  sim_flip_chip_distance.stack.json
tutorials/big_geometry/: README.md
tutorials/no_inset/: martinis2022_ribbon_route_a.ipynb  martinis2022_ribbon_route_b.ipynb  martinis2022_ribbon_route_c.ipynb  resonator_route_a.ipynb  resonator_route_b.ipynb  resonator_route_c.ipynb  resonator_with_indium_bumps_route_a.ipynb  resonator_with_indium_bumps_route_b.ipynb  resonator_with_indium_bumps_route_c.ipynb  sim_flip_chip_distance_route_a.ipynb  sim_flip_chip_distance_route_b.ipynb  sim_flip_chip_distance_route_c.ipynb
tutorials/small_geometry/: README.md
tutorials/with_inset/: martinis2022_ribbon_route_a.ipynb  (+11 more)
(+22 files in other folders)
