[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-geometry-builder"
version = "0.1.0"
description = "Layout-tool-agnostic semantic geometry IR and route builder scaffold."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OrPenStrike" }]
dependencies = [
    "gdstk",
    "gmsh",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
